--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-service": "~4.5.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
